move weapon group select to config Add tray icon